<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.AppWidget.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/widget_background_color"
    android:theme="@style/Theme.AppWidget.AppWidgetContainer">
<!--    -->

    <include layout="@layout/widget_todo_list_title_region_preview" />

    <CheckBox
        style="@style/Widget.AppWidget.Checkbox.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/todo_list_sample_1" />

    <CheckBox
        style="@style/Widget.AppWidget.Checkbox.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_list_sample_2" />

    <CheckBox
        style="@style/Widget.AppWidget.Checkbox.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_list_sample_3" />

<!--    <CheckBox-->
<!--        style="@style/Widget.AppWidget.Checkbox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/todo_list_kotlin" />-->
</LinearLayout>